.provarCaches/00Df2000001KKNJEA4/objects/Geo_Layer_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Layer_Assignments__c</fullName>
        <label>Geo Layer Assignments</label>
        <referenceTo>Geo_Layer_Assignments__c</referenceTo>
        <relationshipLabel>Geo Layer Assignment</relationshipLabel>
        <relationshipName>Geo_Layer_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Geo Layer Assignment</label>
    <nameField>
        <label>Geo Layer Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Layer Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>